feat: functional changes for better predictors performance and ingestions service behavior
